# menu-vision

./: .gitignore  README.md  pyproject.toml
.kiro/specs/menu-vision/: design.md  tasks.md
Menu-AI-Gen/: .gitignore
Menu-AI-Gen/frontend/: package.json  tsconfig.tsbuildinfo
Menu-AI-Gen/frontend/src/: App.css  App.tsx  DishCard.tsx  ResultsPage.tsx  (+5 more)
Menu-AI-Gen/infra/: cdk.json  menu_vision_stack.py
Menu-AI-Gen/menu_vision/: __init__.py  image_gen.py  llm.py  models.py  ocr.py  pipeline.py  storage.py
Menu-AI-Gen/tests/: conftest.py  test_image_gen.py  test_models.py  test_ocr.py  test_pipeline.py  test_process_handler.py  test_property_llm.py  test_property_models.py  test_property_pipeline.py  test_property_validation.py  test_storage.py  test_validation.py
backend/: __main__.py  image_gen.py  llm.py  models.py  pipeline.py  storage.py
backend/handlers/: process.py  status.py  submit.py  validation.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  CameraCapture.tsx  DishCard.test.tsx  DishCard.tsx  ResultsPage.tsx  UploadPage.tsx  api.test.ts  api.ts  config.ts  types.ts  validation.test.ts
infra/: app.py  menu_vision_stack.py
menu_vision/: __main__.py
menu_vision/handlers/: status.py
pillow-11.3.0.dist-info/: RECORD
tests/: test_cli.py  test_image_gen.py  test_llm.py  test_models.py  test_ocr.py  test_pipeline.py  test_process_handler.py  test_property_llm.py  test_property_models.py  test_property_pipeline.py  test_property_validation.py  test_status_handler.py  test_storage.py  test_submit_handler.py  test_validation.py
(+4 files in other folders)
